[gd_scene load_steps=30 format=3 uid="uid://dx0klmv80ca8e"]

[ext_resource type="Script" uid="uid://cp8l355e8uhqa" path="res://Game/Color-Hunt/script/color_list.gd" id="1_jkuuy"]
[ext_resource type="Theme" uid="uid://cyx1ngbtbpcvo" path="res://Game/LetterTracing/alphabet.tres" id="2_3sg35"]
[ext_resource type="FontFile" uid="uid://3uaootdnyxb7" path="res://Game/Color-Hunt/Baloo_2/static/Baloo2-Bold.ttf" id="3_14o3a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_14o3a"]
bg_color = Color(0.658824, 0.854902, 0.862745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v8kg6"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mvqax"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_53b82"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qli25"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jox0o"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwb6d"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqdhe"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4a8h"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmr44"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dw00i"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ut0v7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aagyk"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8m7lm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_im64j"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xoqm"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vqnq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ll2s5"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r2a6m"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_arbl7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_urjkt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kr5xh"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7hfj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccykq"]
bg_color = Color(1, 0.909804, 0.713726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Theme" id="Theme_e0lox"]

[sub_resource type="GDScript" id="GDScript_vei67"]
script/source = "extends Label
"

[node name="Color Hunt" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jkuuy")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_14o3a")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -625.0
offset_right = 588.0
offset_bottom = 241.0
grow_horizontal = 2
theme = ExtResource("2_3sg35")
theme_override_font_sizes/font_size = 170
text = "Color Hunt Game"

[node name="MarginContainer2" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ExitButton" type="Button" parent="Panel/MarginContainer2"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("2_3sg35")
theme_override_colors/font_color = Color(0.239216, 0.352941, 0.501961, 1)
theme_override_fonts/font = ExtResource("3_14o3a")
theme_override_font_sizes/font_size = 110
theme_override_styles/focus = SubResource("StyleBoxFlat_v8kg6")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_mvqax")
theme_override_styles/disabled = SubResource("StyleBoxFlat_53b82")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_qli25")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_jox0o")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_gwb6d")
theme_override_styles/hover = SubResource("StyleBoxFlat_nqdhe")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_o4a8h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cmr44")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_dw00i")
theme_override_styles/normal = SubResource("StyleBoxFlat_ut0v7")
text = " Exit "

[node name="NextButton" type="Button" parent="Panel/MarginContainer2"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("2_3sg35")
theme_override_colors/font_color = Color(0.239216, 0.352941, 0.501961, 1)
theme_override_fonts/font = ExtResource("3_14o3a")
theme_override_font_sizes/font_size = 110
theme_override_styles/focus = SubResource("StyleBoxFlat_aagyk")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_8m7lm")
theme_override_styles/disabled = SubResource("StyleBoxFlat_im64j")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0xoqm")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_7vqnq")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_ll2s5")
theme_override_styles/hover = SubResource("StyleBoxFlat_r2a6m")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_arbl7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_urjkt")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_kr5xh")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7hfj")
text = "Next"

[node name="Button" type="Button" parent="Panel/MarginContainer2"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("2_3sg35")
theme_override_colors/font_color = Color(0.784314, 0.482353, 0.243137, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_ccykq")
text = "â˜°
"

[node name="ColorRect" type="ColorRect" parent="Panel/MarginContainer2"]
custom_minimum_size = Vector2(550, 650)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_e0lox")

[node name="Label" type="Label" parent="Panel/MarginContainer2/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="Panel/MarginContainer2"]
wait_time = 60.0
one_shot = true
autostart = true

[node name="CountdownLabel" type="Label" parent="Panel/MarginContainer2/Timer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -23.0
offset_right = 18.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
script = SubResource("GDScript_vei67")

[connection signal="pressed" from="Panel/MarginContainer2/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Panel/MarginContainer2/NextButton" to="." method="_on_next_button_pressed"]
